Prevent handle MouseUp when mouse is capture a scrollbar

In this patch, we add a captured check in
ScrollbarAnimationController::DidMouseUp.

BUG=696717
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2718193002
Cr-Commit-Position: refs/heads/master@{#454277}

Former-commit-id: 7e682316e7b28920d1dfd8bdc1b4623a15062804